@@ -1,3 +1,8 @@
+2008-05-03  Marcus D. Hanwell  <marcus@cryos.org>
+
+	* libavogadro/src/tools/aligntool.*: Used guarded pointers (QPointer)
+	to make the align tool much harder to crash.
+
 2008-05-02  Marcus D. Hanwell  <marcus@cryos.org>
 
 	* libavogadro/src/extensions/orbitaldialog.*,
